[package]
name = "mdbook-preprocessor-boilerplate"
version = "0.1.0"
edition = "2021"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
description = "Boilerplate code for mdbook preprocessors"
keywords = ["mdbook", "proprocessor", "boilerplate"]
readme = "README.md"
repository = "https://github.com/JoelCourtney/mdbook-preprocessor-boilerplate"
license = "GPL-3.0"

[dependencies]
mdbook = "0.4.14"
clap = "2.34"
anyhow = "1.0"
serde_json = "1.0"
semver = "1.0"