[package]
name = "mdbook-preprocessor-boilerplate"
version = "0.2.0"
edition = "2024"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
description = "Boilerplate code for mdbook preprocessors"
keywords = ["mdbook", "proprocessor", "boilerplate"]
readme = "README.md"
repository = "https://github.com/JoelCourtney/mdbook-preprocessor-boilerplate"
license = "GPL-3.0"

[dependencies]
mdbook-preprocessor = { version = "0.5", default-features = false }
clap = { version = "4.5", default-features = false, features = ["std", "string"] }
serde_json = "1.0"
semver = "1.0"

[dev-dependencies]
anyhow = "1.0"

